--- a/src/app/masters/shipment/shipment.component.html
+++ b/src/app/masters/shipment/shipment.component.html
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col-md-6">
-        <h2 style="margin-bottom: 5%;">
+        <a onclick="goBack()"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+        <h5 style="margin-bottom: 2%;">
             Shipment Schedule
-        </h2>
+        </h5>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6 banner-sec mob-date">
         <div ng-app ng-controller="Ctrl" style="text-align: right; margin-top: 10px;">
             <b style="margin-bottom: 0px;">
                 {{date | date:'dd.MM.yyyy'}}
@@ -209,17 +210,17 @@
 
 <!-- <a routerLink="add" class="btn btn-sm btn-success mb-2">Add User</a> -->
 <div class="row" style="margin-bottom: 10px;">
-    <div class="col-md-6">
+    <div class="col-md-6 col-xs-12">
         <div class="input-group-icon input-group-icon-left mr-3">
             <form class="form-inline">
                 <i class="fas fa-search" aria-hidden="true"></i>
-                <input class="form-control form-control-sm ml-3 w-75" id="key-search" type="text" name="search"
+                <input class="form-control form-control-sm ml-3 w-87 m-mb-1" id="key-search" type="text" name="search"
                     [(ngModel)]="searchText" autocomplete="off" placeholder="Search"
                     style="background-color: #d9d9d9; ">
             </form>
         </div>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-5 col-xs-6 pull-left">
         <button type="button" (click)="addShipment()" class="btn btn-success" data-toggle="modal"
             data-target="#exampleModal" style="background-color:  #3385ff; padding: 2px 10px; float: right;">
             <i class="fa fa-plus" aria-hidden="true" style="width: 30px; -webkit-text-stroke: 0.05px white;">
@@ -228,9 +229,9 @@
             NEW SHIPMENT
         </button>
     </div>
-    <div class="col-md-1">
+    <div class="col-md-1 col-xs-6 pull-right">
         <button class="btn btn-success mr-1" title="Download Excel File" (click)="exportAsXLSX()"
-            style="float:right;"><i class="fas fa-file-excel fa-2x"></i>
+            style="float:right; padding: 3px 10px;"><i class="fas fa-file-excel"></i>
         </button>
     </div>
 </div>
