--- a/src/app/report/alertanalytics/alertanalytics.component.html
+++ b/src/app/report/alertanalytics/alertanalytics.component.html
@@ -1,9 +1,9 @@
 <div style="margin-left:2%; margin-right: 1%; margin-top: 2%;">
     <div class="row">
         <div class="col-md-6">
-            <a routerLink="/dashboard"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+            <a onclick="goBack()"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a> 
             <h5 style="margin-bottom: 2%;">
-                Alert Analytics
+                Alert Analytics (In Development)
             </h5>
             <h6 style="margin-bottom: 2%;">
                 Pin No : <span class="text-primary">{{ pinno }}</span>
