--- a/src/app/trackVehicles/track-summary/track-summary.component.html
+++ b/src/app/trackVehicles/track-summary/track-summary.component.html
@@ -1,6 +1,6 @@
 <div class="row" style="margin: 0px; margin-bottom: 2%;">
     <div class="col-md-6 banner-sec">
-        <a routerLink="/track"> <i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+        <a onclick="goBack()"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
         <h5 class="m-mb-minus-15" style="margin-bottom: 3%;">
             Vehicle {{selected}} :- <span>{{pin}}</span>
         </h5>
