--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,11 +1,12 @@
 <div class="row">
     <div class="col-md-6">
-        <h1 style="margin-bottom: 5%;">
+        <a onclick="goBack()"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+        <h5 style="margin-bottom: 2%;">
             Notifications
-        </h1>
+        </h5>
     </div>
-    <div class="col-md-6">
-        <div ng-app ng-controller="Ctrl" style="text-align: right; margin-top: 10px;">
+    <div class="col-md-6 m-mb-1 mob-date">
+        <div ng-app ng-controller="Ctrl" style="text-align: right;">
             <b style="margin-bottom: 0px;">
                 {{date | date:'dd.MM.yyyy'}}
             </b>
@@ -13,55 +14,31 @@
         <div style="text-align: right;">
             {{date | date:'EEEE'}}
         </div>
-
     </div>
-
 </div>
 
-<div class="row">
-    <div class="col-md-6">
-
-    </div>
-
-    <div class="col-md-6">
-        <div class="row">
-            <div class="col-md-6" style="text-align: center; left: 5px;">
-                From
-            </div>
-            <div class="col-md-6" style="left: 24px;">
-                To
-            </div>
+<div class="row" style="margin-bottom: 10px;">
+    <div class="col-md-5 m-mb-1">
+        <div class="input-group-icon input-group-icon-left mr-3">
+            <form class="form-inline">
+                <i class="fas fa-search" aria-hidden="true"></i>
+                <input class="form-control form-control-sm ml-3 w-87" id="key-search" type="text" name="search"
+                    [(ngModel)]="searchText" autocomplete="off" placeholder="Search"
+                    style="background-color: #d9d9d9; ">
+            </form>
         </div>
-
-    </div>
-</div>
-
-
-<div class="row">
-    <div class="col-md-6">
-
-
-        <form class="form-inline">
-
-            <i class="fas fa-search" aria-hidden="true"></i>
-            <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search Vehicle"
-                aria-label="Search" name="search" [(ngModel)]="searchText" autocomplete="off"
-                style="background-color: #d9d9d9; ">
-        </form>
     </div>
 
-
-
-    <div class="col-md-6">
+    <div class="col-md-6 offset-md-1">
         <form class="form-inline" [formGroup]="form" (ngSubmit)="onSubmit()" style="float: right;">
-
-            <input type="date" class="form-control" [ngModel]="startDate | date:'yyyy-MM-dd'" max="{{startDate}}"
-                formControlName="startDate" style="padding: 0px 10px; margin-right: 15px;">
-            <input type="date" class="form-control" [ngModel]="endDate | date:'yyyy-MM-dd'" min="{{endDate}}"
-                formControlName="endDate" placeholder="Tosasasasas" style="padding: 0px 10px; margin-right: 10px;">
-            <button class="btn btn-success" type="button" type="submit"
-                style="background-color:  #3385ff; padding: 2px 5px; float: right;">GO!</button>
-
+            <label class="mob-footer-hide">From</label> &nbsp;
+            <input type="date" [ngModel]="startDate | date:'yyyy-MM-dd'" max="{{startDate}}" formControlName="startDate"
+                class="form-control m-w-35" style="padding: 0px 10px; margin-right: 15px;">
+            <label>To</label> &nbsp;
+            <input type="date" [ngModel]="endDate | date:'yyyy-MM-dd'" min="{{endDate}}" formControlName="endDate"
+                class="form-control m-w-35" placeholder="Tosasasasas" style="padding: 0px 10px; margin-right: 10px;">
+            <button class="btn btn-primary" type="button" type="submit"
+                style="padding: 6px 7px; float: right; border: none;">GO!</button>
         </form>
     </div>
 </div>
@@ -110,6 +87,6 @@
         </tbody>
     </table>
 </div>
-<div class="input-group-icon input-group-icon-right mr-3 col-md-12" style="margin-left: 50%;">
+<div class="input-group-icon input-group-icon-right mr-3 col-md-12 col-xs-12">
     <pagination-controls (pageChange)="p = $event"></pagination-controls>
 </div> 
