--- a/src/app/report/batch/batch.component.html
+++ b/src/app/report/batch/batch.component.html
@@ -1,7 +1,7 @@
 <div style="margin-left:2%; margin-right: 1%; margin-top: 2%;">
     <div class="row">
         <div class="col-md-6">
-            <a routerLink="/dashboard"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+            <a onclick="goBack()"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a> 
             <h5 style="margin-bottom: 2%;">
                 Batch Report
             </h5>
