--- a/src/app/report/battery/battery.component.html
+++ b/src/app/report/battery/battery.component.html
@@ -1,7 +1,7 @@
 <div style="margin-left:2%; margin-right: 1%; margin-top: 2%;">
     <div class="row">
         <div class="col-md-6">
-            <a routerLink="/dashboard"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+            <a onclick="goBack()"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a> 
             <h5 style="margin-bottom: 2%;">
                 Battery Analytics
             </h5>
@@ -56,7 +56,7 @@
                 <tr>
                     <th>Lot No</th>
                     <th>Installation Dt</th>
-                    <th>Replacement Due On</th>
+                    <th>Req. Replacement Due On</th>
                     <th>Days Remaining</th>
                 </tr>
             </thead>
@@ -66,7 +66,8 @@
                     <td> {{50*(p-1)+i+1}} </td>
                     <td> {{ b.pinno }} </td>
                     <td> {{ b.deviceModel }} </td>
-                    <td> {{b.manufacturingDate | slice:8:10}}-{{b.manufacturingDate| slice:5:7}}-{{b.manufacturingDate| slice:0:4}} </td>
+                    <!-- <td> {{b.manufacturingDate | slice:8:10}}-{{b.manufacturingDate| slice:5:7}}-{{b.manufacturingDate| slice:0:4}} </td> -->
+                    <td> {{b.manufacturingDate | date:'dd-MM-yyyy'}} </td> 
                     <td> {{ b.batterylotno }} </td>
                     <td> {{b.batteryInstallationDate | slice:8:10}}-{{b.batteryInstallationDate| slice:5:7}}-{{b.batteryInstallationDate| slice:0:4}} </td>
                     <td> {{b.replacementDueOn | slice:8:10}}-{{b.replacementDueOn| slice:5:7}}-{{b.replacementDueOn| slice:0:4}} </td>
