--- a/src/app/report/fuelanalytics/fuelanalytics.component.html
+++ b/src/app/report/fuelanalytics/fuelanalytics.component.html
@@ -1,7 +1,7 @@
 <div style="margin-left:2%; margin-right: 1%; margin-top: 2%;">
     <div class="row">
         <div class="col-md-6">
-            <a routerLink="/dashboard"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+            <a onclick="goBack()"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a> 
             <h5 style="margin-bottom: 2%;">
                 Fuel Analytics
             </h5>
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-6">
             <div class="input-group-icon input-group-icon-left mr-3">
-                <!-- <pagination-controls (pageChange)="p = $event"></pagination-controls> -->
+                <pagination-controls (pageChange)="p = $event"></pagination-controls>
             </div>
         </div>
     </div>
