--- a/src/app/report/non-iot/non-iot.component.html
+++ b/src/app/report/non-iot/non-iot.component.html
@@ -1,87 +1,115 @@
 <div style="margin-left:2%; margin-right: 1%; margin-top: 2%;">
-<!-- <div *ngIf="!variant || inActive == false">
+    <!-- <div *ngIf="!variant || inActive == false">
     <span class="spinner-border spinner-border-lg align-center"></span>
 </div> -->
-<div class="row" style="margin-top: 10px;">
-    <div class="col-md-6 banner-sec">
-        <a routerLink="/dashboard"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
-        <h5 style="margin-bottom: 2%;">
-            Non IOT Machines Report
-        </h5>
-    </div>
-    <div class="col-md-6 banner-sec mob-date">
-        <div ng-app ng-controller="Ctrl" style="text-align: right;">
-            <b style="margin-bottom: 0px;">
-                {{date | date:'dd.MM.yyyy'}}
-            </b>
+    <div class="row" style="margin-top: 10px;">
+        <div class="col-md-6 banner-sec">
+            <a routerLink="/dashboard"><i class="fa fa-arrow-circle-left" style="margin: 10px 0;"></i> Back </a>
+            <h5 style="margin-bottom: 2%;">
+                Non IOT Machines Report
+            </h5>
         </div>
-        <div style="text-align: right;">
-            {{date | date:'EEEE'}}
-        </div>
-    </div>
-</div>
-<div class="row" style="margin-bottom: 10px;">
-    <div class="col-md-5">
-        <div class="input-group-icon input-group-icon-left mr-3">
-            <form class="form-inline">
-                <i class="fas fa-search" aria-hidden="true"></i>
-                <input class="form-control form-control-sm ml-3 w-87" [(ngModel)]="searchText" id="key-search" type="text" name="search" autocomplete="off" placeholder="Search"
-                    style="background-color: #d9d9d9; ">
-            </form>
+        <div class="col-md-6 banner-sec mob-date">
+            <div ng-app ng-controller="Ctrl" style="text-align: right;">
+                <b style="margin-bottom: 0px;">
+                    {{date | date:'dd.MM.yyyy'}}
+                </b>
+            </div>
+            <div style="text-align: right;">
+                {{date | date:'EEEE'}}
+            </div>
         </div>
     </div>
-</div>
+    <div class="row" style="margin-bottom: 10px;">
+        <div class="col-md-5 col-xs-12">
+            <div class="input-group-icon input-group-icon-left mr-3">
+                <form class="form-inline">
+                    <i class="fas fa-search" aria-hidden="true"></i>
+                    <input class="form-control form-control-sm ml-3 w-87" [(ngModel)]="searchText" id="key-search"
+                        type="text" name="search" autocomplete="off" placeholder="Search"
+                        style="background-color: #d9d9d9; ">
+                </form>
+            </div>
+        </div>
+        <div class="col-md-7 col-xs-12">
+            <div class="row">
+                <div class="col-md-5 col-xs-2 m-mb-1">
+                    <button (click)="downloadDemoFile()" class="btn btn-success mr-1" title="Download Sample File"
+                        style="float: left; padding: 3px 10px;"><i class="fas fa-file-download"></i></button>
+                </div>
+                <div class="col-md-5 offset-md-2 col-xs-12 m-mb-1">
+                    <form [formGroup]="fileUploadForm" (ngSubmit)="onFormSubmit()">
+                        <div class="row">
+                            <div class="col-md-6 col-xs-10">
+                                <input type="file" id="customFile" name="myfile"
+                    (change)="onFileSelect($event)" #UploadFileInput>
+                            </div>
+                            <div class="col-md-6 col-xs-2">
+                                <button type="submit" class="btn btn-success" title="Upload Bulk Excel File"
+                                    style="float: right; padding: 3px 10px;">
+                                    <i class="fas fa-file-upload">
+                                    </i>
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-<div class="tableFixHead">
-    <table class="table table-striped table-bordered table-hover" style="margin-top: 10px;">
-        <thead class="thead-dark">
-            <tr>
-                <th>#</th>
-                <th>Model</th>
-                <th>Variant</th>
-                <th>{{pinNo}}</th>
-                <th>Mfg Date</th>
-                <th>Engine No.</th>
-                <th>Type</th>
-                <th>Last Data Recd</th>
-                 <th>Lat</th>
-                <th>Long</th>
-                <th>Status</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let n of nonIotCount | filter:searchText | paginate : {itemsPerPage : 50, currentPage : p} let i = index">
-                <td> {{ i+1 }} </td>
-                <td> {{ n.deviceModel }} </td>
-                <td> {{ n.variant }} </td>
-                <td> {{ n.pinno }} </td>
-                <td> {{n.manufacturingDate | slice:8:10}}-{{n.manufacturingDate| slice:5:7}}-{{n.manufacturingDate| slice:0:4}} </td>
-                <td> {{ n.engineNumber }} </td>
-                <td> {{ n.type | uppercase }} </td>
-                <td> {{ n.lastDataReceivedAt | date:'dd-MM-yyyy':'+0000' }} </td>
-                 <td> {{ n.lat }} </td>
-                <td> {{ n.lng }} </td>
-                <td> {{ n.status }} </td>
-            </tr>
-            <tr *ngIf="!nonIotCount"> 
-            <td colspan="4" class="text-center">
-                <span class="spinner-border spinner-border-lg align-center"></span>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</div>
-<div class="row">
-    <div class="col-md-2">
-
+    <div class="tableFixHead">
+        <table class="table table-striped table-bordered table-hover" style="margin-top: 10px;">
+            <thead class="thead-dark">
+                <tr>
+                    <th>#</th>
+                    <th>Model</th>
+                    <th>Variant</th>
+                    <th>{{pinNo}}</th>
+                    <th>Mfg Date</th>
+                    <th>Engine No.</th>
+                    <th>Type</th>
+                    <th>Last Data Recd</th>
+                    <th>Lat</th>
+                    <th>Long</th>
+                    <th>Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr
+                    *ngFor="let n of nonIotCount | filter:searchText | paginate : {itemsPerPage : 50, currentPage : p} let i = index">
+                    <td> {{ i+1 }} </td>
+                    <td> {{ n.deviceModel }} </td>
+                    <td> {{ n.variant }} </td>
+                    <td> {{ n.pinno }} </td>
+                    <td> {{n.manufacturingDate | slice:8:10}}-{{n.manufacturingDate| slice:5:7}}-{{n.manufacturingDate|
+                        slice:0:4}} </td>
+                    <td> {{ n.engineNumber }} </td>
+                    <td> {{ n.type | uppercase }} </td>
+                    <td> {{ n.lastDataReceivedAt | date:'dd-MM-yyyy':'+0000' }} </td>
+                    <td> {{ n.lat }} </td>
+                    <td> {{ n.lng }} </td>
+                    <td> {{ n.status }} </td>
+                </tr>
+                <tr *ngIf="!nonIotCount">
+                    <td colspan="4" class="text-center">
+                        <span class="spinner-border spinner-border-lg align-center"></span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <div class="col-md-4">
+    <div class="row">
+        <div class="col-md-2">
 
-    </div>
-    <div class="col-md-6">
-        <div class="input-group-icon input-group-icon-left mr-3">
-            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+        </div>
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-6">
+            <div class="input-group-icon input-group-icon-left mr-3">
+                <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            </div>
         </div>
     </div>
-</div>
 </div>
