--- a/src/app/report/service-report/service-report.component.html
+++ b/src/app/report/service-report/service-report.component.html
@@ -34,7 +34,7 @@
                 <!-- <app-add></app-add>  add.component.ts -->
                 <div>
                     <table class="table table-striped table-bordered table-hover" style="margin-top: 10px; ">
-                        <tbody>
+                        <tbody style="height: auto;">
                             <tr>
                                 <td style="font-weight: bold;text-align: right;">
                                     Device Model:
@@ -95,13 +95,13 @@
                 </div>
                 <div style="width: 50%;  display: block;margin: auto;">
                     <table class="table table-hover" style="margin-top: 10px; ">
-                        <thead class="thead-dark">
+                        <thead class="thead-dark" style="width: 100%;">
                             <tr>
                                 <th>Category</th>
                                 <th>Sub-Category</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody style="height: auto;">
                             <tr *ngFor="let cat of serviceDataCategory">
                                 <td>{{cat.category}}</td>
                                 <td>{{cat.subcategory}}</td>
@@ -135,7 +135,7 @@
                 <form [formGroup]="form1" (ngSubmit)="onSubmit()">
                     <div class="row" style="margin-top: 10px;">
                         <div class="col-md-6">
-                            <label><span class="required-asterisk" style='color: red;'>*</span>Category</label><br>
+                            <label>Category</label><br>
                             <select class="form-control" formControlName="category" class="form-control"
                                 (change)="getSubCategory()">
                                 <option></option>
@@ -147,7 +147,7 @@
 
                         </div>
                         <div class="col-md-5">
-                            <label><span class="required-asterisk" style='color: red;'>*</span> Sub Category</label><br>
+                            <label> Sub Category</label><br>
                             <select class="form-control" formControlName="subcategory" class="form-control">
                                 <option></option>
                                 <option *ngFor="let sub of subcategoryDocs">{{sub.name}}</option>
@@ -169,7 +169,7 @@
                     </div>
                     <div *ngIf='showFromData'>
                         <table class="table table-striped table-bordered table-hover" style="margin-top: 10px;">
-                            <thead class="thead-dark">
+                            <thead class="thead-dark" style="width: 100%;">
                                 <th>
                                     Category
                                 </th>
@@ -181,7 +181,7 @@
                                 </th>
                             </thead>
 
-                            <tbody>
+                            <tbody style="height: auto;">
                                 <tr *ngFor="let t of release let i = index">
                                     <td> {{t.category}}</td>
                                     <td> {{t.subcategory}}</td>
@@ -293,41 +293,37 @@
 
 
 <div class="tableFixHead">
-    <table class="table table-striped table-bordered table-hover" style="margin-top: 10px;">
+    <table class="table table-striped table-bordered table-hover" style="margin-top: 10px; width: 130%">
         <thead class="thead-dark" style="position: sticky;">
             <tr>
 
-                <th rowspan="2">#</th>
-                <th rowspan="2">Model</th>
-                <th rowspan="2">Variant</th>
-                <th rowspan="2">Pin No.</th>
-                <th colspan="3">Service</th>
+                <th rowspan="2" style="width: 2%;">#</th>
+                <th rowspan="2" style="width: 6%;">Model</th>
+                <th rowspan="2" style="width: 5%;">Variant</th>
+                <th rowspan="2" style="width: 10%;">Pin No.</th>
+                <th colspan="3" style="text-align: center;">Service</th>
                 <th rowspan="2" style="padding: 7px 25px;">CreatedOn</th>
-                <th rowspan="2">Vehicle No</th>
-                <th colspan="2">Customer</th>
-                <th colspan="2">Dealer</th>
-                <th rowspan="2">Remarks</th>
-                <th rowspan="2">Status</th>
+                <!-- <th rowspan="2">Vehicle No</th> -->
+                <th colspan="2" style="text-align: center;">Customer</th>
+                <th rowspan="2">Dealer Name</th>
+                <!-- <th rowspan="2">Remarks</th> -->
+                <th rowspan="2" style="width: 8%;">Status</th>
             </tr>
             <tr>
                 <th>Type</th>
-                <th style="padding: 7px 50px;">Category</th>
-                <th style="padding: 7px 95px;">No.</th>
-                <th>Name</th>
-                <th>Contact</th>
+                <th>Category</th>
+                <th>No.</th>
                 <th>Name</th>
                 <th>Contact</th>
             </tr>
         </thead>
         <tbody>
-
-
             <tr
                 *ngFor="let s of serviceList | filter:searchText | paginate : {itemsPerPage : 50, currentPage : p} let i = index">
-                <td>{{ i+1 }}</td>
-                <td>{{ s.deviceModel }}</td>
-                <td>{{ s.variant }}</td>
-                <td>{{ s.pinno }}</td>
+                <td style="width: 2%;">{{ i+1 }}</td>
+                <td style="width: 6%;">{{ s.deviceModel }}</td>
+                <td style="width: 5%;">{{ s.variant }}</td>
+                <td style="width: 10%;">{{ s.pinno }}</td>
                 <td>
                     <ul class="dataList" *ngFor="let m of s.services">
                         <li>
@@ -350,8 +346,8 @@
                             <a href="#exampleModal" (click)="getServiceById(s.pinno, m.serviceNumber)" data-toggle="modal"><u>{{ m.serviceNumber }}</u></a>
                             <br>
                         </li>
-                        <li *ngIf="m.status == 'Closed'">
-                            <a href="#exampleModal3" (click)="getServiceById(s.pinno, m.serviceNumber)" data-toggle="modal"><u>{{ m.serviceNumber }}</u></a>
+                        <li *ngIf="m.status == 'Closed'" class="text-success">
+                            <a class="text-success" href="#exampleModal3" (click)="getServiceById(s.pinno, m.serviceNumber)" data-toggle="modal"><u>{{ m.serviceNumber }}</u></a>
                         <br>
                         </li>
                     </ul>
@@ -364,24 +360,25 @@
                         </li>
                     </ul>
                 </td>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-                <td>--</td>
-                <td>
+                <!-- <td>--</td> -->
+                <td>{{ s.customer.loginName }}</td>
+                <td>{{ s.customer.phone }}</td>
+                <td>{{ s.customer.dealerName }}</td>
+                <!-- <td>
                     <ul class="dataList" *ngFor="let m of s.services">
                         <li>
                             {{m.remarks | slice:0:40 }}.....
                             <br>
                         </li>
                     </ul>
-                </td>
-                <td>
+                </td> -->
+                <td style="width: 8%;">
                     <ul class="dataList" *ngFor="let m of s.services">
-                        <li>
-                            {{m.status }}
-                            <br>
+                        <li *ngIf="m.status == 'Closed'" class="text-success">
+                            {{m.status}}
+                        </li>
+                        <li *ngIf="m.status != 'Closed'">
+                            {{m.status}}
                         </li>
                     </ul>
                 </td>
