--- a/src/app/report/service-report/service-report.component.less
+++ b/src/app/report/service-report/service-report.component.less
@@ -1,11 +1,26 @@
-.tableFixHead {
-  overflow-y: auto;
-  height: 400px;
+.tableFixHead
+{
+  overflow: auto;
 }
-.tableFixHead thead th {
-  position: sticky;
-  top: 0;
+ul.dataList {
+  padding: 0 0 0 5px;
 }
+// header fix start
+tbody {
+  display:block;
+  height:300px;
+  overflow:auto;
+}
+thead, tbody tr {
+  display:table;
+  width:100%;
+  table-layout:fixed;/* even columns width , fix width of table too*/
+}
+thead {
+  width: calc( 100% - 1em )/* scrollbar is average 1em/16px width, remove it from thead width */
+}
+// header fix end
+
 .modal-header {
   background-color: #454397;
 }
@@ -19,20 +34,18 @@ table {
   width: 100%;
   font-size: small;
 }
+
 th,
 td {
   padding: 8px 16px;
   border: 1px solid #ccc;
 }
+
 .head th{
   vertical-align: top;
 }
+
 .table tr.active td {
   background-color:#454397 !important;
   color: white;
-}
-
-.dataList
-{
-  padding: 0 0 0 10px;
 }
