--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -12,18 +12,6 @@
       z-index: -1 !important;
   }
 
-  .reset-mar
-  {
-    margin: 25px 0px 25% 0;
-  }
-
-  .reset-header
-  {
-    background-color: #454397 !important;
-    color: #fff !important;
-    border: 1px solid #454397 !important;
-  }
-
   .w-87
     {
       width: 87% !important;
@@ -41,11 +29,18 @@
   }
 
   .vehMon
-{
-    /* flex: 0 0 15.666667% !important;
-    max-width: 15.666667% !important; */
-    margin: 0 1%
-}
+  {
+      /* flex: 0 0 15.666667% !important;
+      max-width: 15.666667% !important; */
+      margin: 0 1%
+  }
+
+  .vehMon-d
+  {
+      /* flex: 0 0 15.666667% !important;
+      max-width: 15.666667% !important; */
+      margin: 0 1% 0 0;
+  }
 
 .vehMonCust
 {
@@ -84,6 +79,12 @@
 {
     flex: 0 0 23% !important;
     max-width: 23% !important;
+}
+
+.breakStat-d
+{
+    flex: 0 0 65.5% !important;
+    max-width: 65.5% !important;
 }
 
 .topPer
